[package]
name = "most-e2e-test-suite"
version = "0.1.0"
edition = "2021"

[dependencies]
aleph_client = "3.0.0"
anyhow = "1.0.79"
env_logger = "0.11.1"
ethers = "2.0.13"
hex = "0.4.3"
log = "0.4.20"
once_cell = "1.19.0"
serde = "1.0.196"
serde_json = "1.0.113"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full"] }
