[package]
name = "most-e2e-test-suite"
version = "0.1.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node/", rev = "c3c6d8b37d586b6b050d1e40675dd6b4ab6adcdb" }
anyhow = "1.0.80"
env_logger = "0.11.2"
ethers = "2.0.13"
hex = "0.4.3"
log = "0.4.20"
once_cell = "1.19.0"
serde = "1.0.197"
serde_json = "1.0.114"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full"] }
