[package]
name = "most-e2e-test-suite"
version = "0.1.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node/", rev = "268bd7eec6a98843674b7a909cec2c0ca8a8f719" }
anyhow = "1.0.80"
env_logger = "0.11.2"
ethers = "2.0.13"
hex = "0.4.3"
log = "0.4.20"
once_cell = "1.19.0"
serde = "1.0.197"
serde_json = "1.0.114"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full"] }
