[workspace]
members = ["relayer", "signer_client", "signer", "signer_tester"]
resolver = "2"

[workspace.dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node", rev = "268bd7eec6a98843674b7a909cec2c0ca8a8f719" }
ethers = { version = "2.0.9" }
subxt = { version = "0.30.1", features = ["substrate-compat"] }
tokio = { version = "1.36" }
tokio-util = { version = "0.7.10" }
tokio-vsock = { version = "0.5.0" }
tracing = { version = "0.1.40" }