[workspace]
members = ["relayer", "signer_client", "signer", "signer_tester", "contracts_azero_client"]
resolver = "2"

[workspace.dependencies]
ethers = { version = "2.0.9" }
subxt = { version = "0.37.0" }
tokio = { version = "1.36" }
tokio-util = { version = "0.7.10" }
tokio-vsock = { version = "0.5.0" }
tracing = { version = "0.1.40" }

[profile.release]
overflow-checks = true
