[package]
name = "signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.0"
ethers = { workspace = true }
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signer_client = { path = "../signer_client" }
subxt = { workspace = true }
thiserror = "1.0"
vsock = "0.4.0"

[dev-dependencies]
assert2 = "0.3.11"
serial_test = "3.0.0"
