[package]
name = "signer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vsock = "0.4.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schnorrkel = "0.11.4"
serde-big-array = "0.5.1"
aleph_client = { workspace = true }
subxt = { workspace = true }
