[package]
name = "signer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleph_client = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subxt = { workspace = true }
thiserror = "1.0"
vsock = "0.4.0"
