[package]
name = "signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vsock = "0.4.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schnorrkel = "0.11.4"
clap = { version = "4.4.18", features = ["derive"] }
hex = "0.4.3"
serde-big-array = "0.5.1"
common = { path = "../common" }
