[package]
name = "most-tests-drink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
shared = { path = "../shared" }
ink-wrapper-types = { version = "0.9.0", default-features = false, features = [
    "drink",
] }
drink = { version = "=0.8.7" }

ink_primitives = "4.3.0"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }

anyhow = "1.0.69"
assert2 = "0.3.10"
