[package]
name = "membrane"
version = "1.0.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }
psp22 = { git = "https://github.com/Cardinal-Cryptography/PSP22.git", default-features = false, features = [
    "mintable",
    "burnable",
]}
psp22-traits = { path = "../psp22-traits" , default-features = false }
shared = { path = "../shared" }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
ink_e2e = { version = "4.3.0" }
# ink_e2e = { git = "https://github.com/paritytech/ink.git", rev = "7d0e0c8451b71eeb50f6f27e67f60cab5430d3f8"}

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "psp22/std", "psp22-traits/std"]
ink-as-dependency = []
e2e-tests = []
