[package]
name = "psp22"
version = "1.0.0"
authors = ["filip.bielejec@cardinals.cc"]
edition = "2021"

[dependencies]
ink = { version = "=4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
psp22-traits = { path = "../psp22-traits" , default-features = false }

[lib]
name = "psp22"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22-traits/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
