[package]
name = "tests"
version = "1.0.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dev-dependencies]
ink = { version = "=4.3.0", default-features = false }
ink_e2e = "=4.3.0"
most = { path = "../most", package = "most", features = ["ink-as-dependency"] }
psp22 = "0.2.0"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
shared = { path = "../shared" }
subxt = "0.31.0"
test_oracle = { path = "../gas-price-oracle/test-contract", features = ["ink-as-dependency"] }
money_box = { path = "../money-box/contract", features = ["ink-as-dependency"] }
wrapped_token = { path = "../token", package = "token", features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[features]
default = ["std", "e2e-tests"]
std = ["ink/std", "most/std", "wrapped_token/std", "test_oracle/std", "money_box/std"]
ink-as-dependency = []
e2e-tests = []
