[package]
name = "tests"
version = "1.0.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dev-dependencies]
ink = { version = "=4.3.0", default-features = false }
ink_e2e = "=4.3.0"
most = { path = "../most", package = "most", features = ["ink-as-dependency"] }
psp22 = "0.2.2"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
shared = { path = "../shared" }
subxt = "0.31.0"
oracle = { path = "../gas-price-oracle/contract", features = ["ink-as-dependency"] }
wrapped_token = { path = "../token", package = "token", features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[features]
default = ["std", "e2e-tests"]
std = ["ink/std", "most/std", "wrapped_token/std", "oracle/std"]
ink-as-dependency = []
e2e-tests = []
