[package]
name = "token"
version = "1.0.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3", default-features = false }
# psp22 = { version = "0.2.0", default-features = false }
# psp22-traits = { path = "../psp22-traits", default-features = false }
psp22 = { path = "/home/filip/CloudStation/aleph/PSP22", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
      "derive",
] }
scale-info = { version = "2.5", default-features = false, features = [
      "derive",
], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22/std"
]
ink-as-dependency = []
