[package]
name = "oracle"
version = "1.0.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }
gas-oracle-trait = { path = "../trait" , default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = [
    "derive",
], optional = true }
ownable2step = { path = "../../ownable2step", default-features = false }


[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "gas-oracle-trait/std", "ownable2step/std"]
ink-as-dependency = []

[profile.release]
overflow-checks = false
